# Quantum-Terminal

./: .gitignore  Cargo.toml  README.md  reality_state.json
src/: main.rs
src/commands/: cat.rs  ls.rs  mod.rs  open.rs  ps.rs
src/filesystem/: mod.rs  unstable_files.rs  virtual_fs.rs
src/reality/: engine.rs  glitch.rs  memory.rs  mod.rs  randomness.rs  timeline.rs
src/shell/: executor.rs  parser.rs
src/ui/: effects.rs  mod.rs  renderer.rs
